refactor: refatorando container composer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     volumes:
       - ./src:/var/www/html
     working_dir: /var/www/html
+    command: composer install
     depends_on:
       - database
       - php82
